   6. MUDGrinder item adder/editor will now only show options appropriate to the area theme -- keep this in mind! 
   7. There is now a mundane/player version of the STAT command for -- wait for it -- viewing character stats
   8. Several electronic/tech/space editor fields finally added to MUDGrinder item editor.
   9. ShopKeeper view now shows more useful information about ships for sale.
# Build 5.8.4 Released 12/01/2014
   *. Database Schema Updated for CMBKLG and CMCLIT.  See the Installation Guide about running DBUpgrade.
   1. Channels now save their back messages to the database for perpetual enjoyment. See DISABLE,CHANNELBACKLOG in coffeemud.ini.
   2. Bit geeky, but exposed the Cross Class skill analysis and Recovery Rates analysis from MUDGrinder (char class and control panel respec)
   3. Scroll Scribing is now available to low level mages and arcanists for limited scroll making, and new transcribing feature.
   4. Bankers can now handle deposited containers as a single deposited object.  Players can now have their safety deposit box type thingys.
   5. Weaving has gotten a little recipe love; not much, but a little.
   6. New Delver chant: Magma Cannon
   7. Broken limbs are now a thing, but not as severe as amputation.  Falling and taking damage will cause it. Bandaging and healing can help.
   8. New Charlatan skills: Break A Leg, Monologue, Cast Blocking, Strike The Set, Upstage, Exit Stage Left, Curtain Call, Ad Lib
   9. New Expertise: Acting
  10. New Alterer spells: Polymorph Object, Magic Bullet, Flame Arrow, Shape Object, Keen Edge, Fabricate
  11. New Illusionist spells: Color Spray, Disguise Undead, Disguise Self, Disguise Other, Simulacrum, Invisibility Sphere
  12. New Abjurer spell: Anti-Plant Shell
  13. New Evoker spells: Purge Invisibility, Helping Hand, Produce Flame, Forceful Hand, Pocket
  14. New Conjurer spells: Watchful Hound, Insect Plague